# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  15 Nov 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Brought the overlay back in sync with the main tree for vmware-modules and vmware-server{-console}.
  Also updated to vmware-any-any105 for testing.

  30 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -app-emulation/vmware-modules/vmware-modules-1.0.0.8.ebuild:
  Removed vmware-modules-0.0.8 since we no longer support VMware Workstation
  3.2.1 in the main tree.

  17 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  I just realized the typo was causing vmware-any-any not to build with server.
  Out goes the huge 100 Mb download, it should all work fine now, sorry.  5:(
  
  17 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fix a typo in vmware-mod before it gets in the tree.
  Also clean up some whitespace errors.

  04 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Reorder VMWARE_VER to ensure it gets picked up in time.
  Fix for bug 149679 thanks to Jason Urbank.

  04 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Synced up the vmware.eclass from the overlay and fixed up a directory/file mismatch.

  03 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Hope this openssl problem can finally be done with.
  Thanks Chris for getting the libraries built and done so quickly!!!  5:)
  
  02 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Oops, very quick fix for vmware-server-console to actually unpack the new openssl lib
  (since we don't inherit the unpack of vmware.eclass).  Hopefully got it out in time...
  
  02 Oct 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Sync vmware.eclass, vmware-server and vmware-server-console with the in-tree version.
  
  02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Updated eclass with the in-tree version for bug #148862.

  27 Sep 2006; Mike Auty <ikelos@gentoo.org> ChangeLog: