@@ -23,7 +23,7 @@ RUN_UPDATE="no"
 dir=/opt/vmware/tools
 Ddir=${D}/${dir}
 
-TARBALL="VMwareTools-5.5.1-19175.tar.gz"
+TARBALL="VMwareTools-5.5.2-29772.tar.gz"
 MY_P=${TARBALL/.tar.gz/}
 
 src_install() {
